removed mapstruct added endpoint for timetable postgres couldn't init in right way