@@ -2,9 +2,11 @@ package com.example.demo.util;
 
 import com.example.demo.model.Group;
 import com.example.demo.model.Lesson;
+import com.example.demo.model.Professor;
 import com.example.demo.model.Student;
 import com.example.demo.repository.GroupRepository;
 import com.example.demo.repository.LessonRepository;
+import com.example.demo.repository.ProfessorRepository;
 import com.example.demo.repository.StudentRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.ApplicationArguments;
@@ -12,7 +14,6 @@ import org.springframework.boot.ApplicationRunner;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -22,6 +23,7 @@ public class DataLoader implements ApplicationRunner {
     private final StudentRepository studentRepository;
     private final LessonRepository lessonRepository;
     private final GroupRepository groupRepository;
+    private final ProfessorRepository professorRepository;
 
     @Override
     public void run(ApplicationArguments args) {
@@ -39,9 +41,16 @@ public class DataLoader implements ApplicationRunner {
 
         Lesson lesson1 = new Lesson();
         List<Group> groups = new ArrayList<>();
-        group1.setLessons(Arrays.asList(lesson1));
+        group1.setLessons(List.of(lesson1));
         groups.add(group1);
         lesson1.setTitle("java");
+        lesson1.setTime("10pm");
+        lesson1.setDay(1);
+        Professor professor = new Professor();
+        professor.setFirstName("doctor");
+        lesson1.setProfessor(professor);
+//        professor.setLessons(List.of(lesson1));
+//        professorRepository.save(professor);
         studentRepository.save(student1);
 
 //        groupRepository.save(group1);
